<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/cl_constraint_layout"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tv_movie_rating_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_margin="16dp"

        android:text="@string/movie_rating_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tv_movie_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"

        app:layout_constraintTop_toBottomOf="@id/tv_movie_rating_title"
        app:layout_constraintLeft_toLeftOf="parent"

        tools:text="8.3"
        />

    <ImageView
        android:id="@+id/iv_rating_star_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:src="@drawable/ic_star_yellow_24dp"

        app:layout_constraintTop_toBottomOf="@id/tv_movie_rating_title"
        app:layout_constraintLeft_toRightOf="@id/tv_movie_rating"
        app:layout_constraintBottom_toBottomOf="@id/tv_movie_rating"
        />

    <TextView
        android:id="@+id/tv_movie_release_day_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"

        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:text="@string/release_day_title"

        app:layout_constraintLeft_toRightOf="@+id/tv_movie_rating_title"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tv_movie_release_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"

        app:layout_constraintLeft_toLeftOf="@+id/tv_movie_release_day_title"
        app:layout_constraintTop_toBottomOf="@id/tv_movie_release_day_title"

        tools:text="22.03.2018"
        />

    <TextView
        android:id="@+id/tv_movie_overview_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"

        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:text="@string/movie_overview_title"

        app:layout_constraintTop_toBottomOf="@id/tv_movie_rating"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/tv_movie_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:paddingRight="16dp"
        android:paddingLeft="16dp"

        android:textAppearance="@style/TextAppearance.AppCompat.Body1"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_overview_title"
        app:layout_constraintRight_toRightOf="parent"

        tools:text="This is overview of the film. This film is cool and so on, and so far."
        />

    <TextView
        android:id="@+id/tv_reviews_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:text="@string/reviews_title"

        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_movie_overview"
        />

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:visibility="visible"
        android:layout_marginStart="8dp"

        app:layout_constraintLeft_toRightOf="@id/tv_reviews_title"
        app:layout_constraintBottom_toBottomOf="@id/tv_reviews_title"
        />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"

        app:layout_constraintTop_toBottomOf="@id/tv_reviews_title"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_reviews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"

        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/tv_reviews_empty_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_margin="16dp"

        android:text="@string/reviews_empty_message"
        android:visibility="invisible"

        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</android.support.constraint.ConstraintLayout>