<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/cl_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"

    tools:context=".screen.popularMovieDetails.MovieDetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/abl_toolbar_wrapper"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/ctl_collapsing_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"

            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary">

            <ImageView
                android:id="@+id/iv_movie_details_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"

                app:layout_collapseMode="parallax" />

           <android.support.v7.widget.Toolbar
               android:id="@+id/tb_movie_details_toolbar"
               android:layout_width="match_parent"
               android:layout_height="?attr/actionBarSize"
               android:elevation="4dp"

               app:popupTheme="@style/AppTheme.PopupOverlay"
               app:layout_collapseMode="pin">

           </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nv_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"

        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <android.support.constraint.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"

            android:id="@+id/cl_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_movie_rating_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/movie_rating_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                />

            <TextView
                android:id="@+id/tv_movie_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"

                app:layout_constraintTop_toBottomOf="@id/tv_movie_rating_title"
                app:layout_constraintLeft_toLeftOf="parent"

                tools:text="8.3"
                />

            <ImageView
                android:id="@+id/iv_rating_star_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/ic_star_yellow_24dp"

                app:layout_constraintTop_toBottomOf="@id/tv_movie_rating_title"
                app:layout_constraintLeft_toRightOf="@id/tv_movie_rating"
                app:layout_constraintBottom_toBottomOf="@id/tv_movie_rating"
                />

            <TextView
                android:id="@+id/tv_movie_release_day_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"

                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:text="@string/release_day_title"

                app:layout_constraintLeft_toRightOf="@+id/tv_movie_rating_title"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/tv_movie_release_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"

                app:layout_constraintLeft_toLeftOf="@+id/tv_movie_release_day_title"
                app:layout_constraintTop_toBottomOf="@id/tv_movie_release_day_title"

                tools:text="22.03.2018"
                />

            <TextView
                android:id="@+id/tv_movie_overview_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:text="@string/movie_overview_title"

                app:layout_constraintTop_toBottomOf="@id/tv_movie_rating"
                app:layout_constraintLeft_toLeftOf="parent"
                />

            <TextView
                android:id="@+id/tv_movie_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_overview_title"
                app:layout_constraintRight_toRightOf="parent"

                tools:text="This is overview of the film. This film is cool and so on, and so far."
                />

            <TextView
                android:id="@+id/tv_reviews_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:text="@string/reviews_title"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_movie_overview"
                />

            <ProgressBar
                android:id="@+id/pb_loading"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:visibility="visible"
                android:layout_marginStart="8dp"

                app:layout_constraintLeft_toRightOf="@id/tv_reviews_title"
                app:layout_constraintBottom_toBottomOf="@id/tv_reviews_title"
                />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"

                app:layout_constraintTop_toBottomOf="@id/tv_reviews_title"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"

                app:layout_constraintTop_toBottomOf="@id/divider"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

    <space.dotcat.popularmovies.widget.CheckableFloatingButton
        android:id="@+id/fb_favorite_film"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/checkable_fab_favorite"

        app:pressedTranslationZ="12dp"
        app:layout_anchor="@+id/abl_toolbar_wrapper"
        app:layout_anchorGravity="bottom|end"/>

    <ImageView
        android:id="@+id/iv_play_trailer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_play_arrow_white_24dp"

        app:layout_collapseMode="parallax"
        app:layout_anchor="@+id/abl_toolbar_wrapper"
        app:layout_anchorGravity="center" />

    <TextView
        android:id="@+id/tv_reviews_empty_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reviews_empty_message"
        android:visibility="invisible"

        app:layout_anchor="@id/rv_reviews"
        app:layout_anchorGravity="center"
        />

</android.support.design.widget.CoordinatorLayout>